--- a/markdown/20240301.md
+++ b/markdown/20240301.md
@@ -3,8 +3,8 @@ Title: 2024 Spring 課程
 Date: 2024-03-01 16:00
 Category: w2
 Tags: 網誌編寫﹐分組
-Slug: w2
-Author: 41123124
+Slug: cd2024-2a-w2
+Author: kmol
 ---
 
 2024 Spring 第二週 分組
