--- a/markdown/20240218.md
+++ b/markdown/20240218.md
@@ -4,7 +4,7 @@ Date: 2024-02-29 23:00
 Category: w1
 Tags: 網誌編寫﹐pelican
 Slug: 2024-Spring-w1-blog-tutorial
-Author: kmol
+Author: probe
 ---
 
 2024 Spring 第一週更新 網誌
