--- a/markdown/20240301.md
+++ b/markdown/20240301.md
@@ -14,26 +14,20 @@ Author: probe
 # 內容管理系統
 ## w2
 1.組別:midag1
+
+組員名單:
+
+41123124張晏菖(組長)
+41123101田芸熏
+41123120段勝吉
+41123140葉承軒
+41123146樊明睿
+41123150顏崇祐
+41136113邱崑展
+41136123林育驊
+
 2.建立github分組倉儲提供組員加入
+
 3.製作組別倉儲ssh鑰匙
+
 4.import進入Replit
-
-使用者可以自行利用 [cmsimde_site] 倉儲作為 Template, 建立自己的網站內容管理系統.
-
-[cmsimde_site]: https://github.com/mdecycu/cmsimde_site
-
-引用網站網址連結的方法:
-
-[cmsimde_site] - 在文章中多次引用同一個網站連結時, 可以使用此種方法.
-
-<https://github.com/mdecycu/cmsimde_site> - 假如想要快速將網址套用 html 網站連結, 可以使用此種方法.
-
-[cmsimde_site](https://github.com/mdecycu/cmsimde_site) - 也可以使用 Markdown 的標準網站連結使用格式.
-
-<pre class="brush: python">
-# 引用 Python 程式的方法
-for i in range(10):
-    print(i, "列出字串")
-</pre>
-
-也可以直接在 .md 檔案中使用 html 標註, 或加入 Javascript 或 Brython 程式碼.
