新增第三週網誌

--- a/markdown/20240301.md
+++ b/markdown/20240301.md
@@ -26,8 +26,8 @@ Author: probe
 41136113邱崑展
 41136123黃育驊
 
-2.建立github分組倉儲提供組員加入
+2.建立github分組倉儲提供組員加入。
 
-3.製作組別倉儲ssh鑰匙
+3.製作組別倉儲ssh鑰匙。
 
-4.import進入Replit
+4.import進入Replit。
