--- a/markdown/20240308.md
+++ b/markdown/20240308.md
@@ -13,9 +13,9 @@ Author: probe
 
 # 內容管理系統
 ## w3
-利用工具翻譯MS Teams裡的pdf，組員分工合作統整上傳。
+1.利用工具翻譯MS Teams裡的pdf，組員分工合作統整上傳。
 
-頁數分組抽籤如下:
+2.頁數分組抽籤如下:
 1-20  葉承軒
 21-31 黃育驊
 32-42 樊明睿
@@ -24,3 +24,5 @@ Author: probe
 65-75 邱崑展
 76-87 段勝吉
 統整  田芸熏
+
+3.協助各組員加入midga1子模組。
