--- a/markdown/20240308.md
+++ b/markdown/20240308.md
@@ -1,10 +1,10 @@
 ---
 Title: 2024 Spring 課程
 Date: 2024-03-08 15:00
-Category: w2
+Category: w3
 Tags: 網誌編寫﹐分組﹐翻譯
 Slug: cd2024-2a-w3
-Author: probe
+Author: Probe
 ---
 
 2024 Spring 第三週 翻譯作業
