--- a/markdown/20240329.md
+++ b/markdown/20240329.md
@@ -1,5 +1,5 @@
 ---
-Title: 2024 Spring 課程
+Title: W6
 Date: 2024-03-29 14:00
 Category: w6
 Tags: 網誌編寫﹐子模組
@@ -8,6 +8,7 @@ Author: Probe
 ---
 
 2024 Spring 第六週 網誌
+
 因群組內的個人倉儲未同步更新，要進入codespaces更改
 程式如下
 git submodule update --init
