第六週跟第八週錯字排版更新

--- a/markdown/20240308.md
+++ b/markdown/20240308.md
@@ -16,13 +16,13 @@ Author: Probe
 1.利用工具翻譯MS Teams裡的pdf，組員分工合作統整上傳。
 
 2.頁數分組抽籤如下:
-1-20  葉承軒
-21-31 黃育驊
-32-42 樊明睿
-43-53 張晏菖
-54-64 顏崇祐
-65-75 邱崑展
-76-87 段勝吉
-統整  田芸熏
+1-20  葉承軒、
+21-31 黃育驊、
+32-42 樊明睿、
+43-53 張晏菖、
+54-64 顏崇祐、
+65-75 邱崑展、
+76-87 段勝吉、
+統整  田芸熏。
 
 3.協助各組員加入midga1子模組。
