--- a/markdown/20240412.md
+++ b/markdown/20240412.md
@@ -8,8 +8,11 @@ Author: Probe
 ---
 
 2024 Spring 第八週 網誌
+
 今日遇到的較難處理的狀況-提交多數中有一則提交檔案過大，但是已經覆蓋很多次的提交。
 
-詢問chatGPT得知要往前推一則提交要輸入git reset --hard HEAD^
+詢問老師解釋git只能利用"增加"來提交檔案，所以之前加入過大的檔案儘管刪掉還是存在，只能透過找到那則提交然後單獨刪除才能解決後續的提交。
+
+查詢chatGPT之後得知要往前推一則提交要輸入git reset --hard HEAD^。
 
 推到自己要的提交之前進行修正。
