--- a/markdown/20240329.md
+++ b/markdown/20240329.md
@@ -10,25 +10,25 @@ Author: Probe
 2024 Spring 第六週 網誌
 
 因群組內的個人倉儲未同步更新，要進入codespaces更改
-程式如下
+程式如下。
 
-git submodule update --init
+git submodule update --init。
 
-cd 自己學號 進入到自己的資料夾內
+cd 自己學號 進入到自己的資料夾內。
 
-git pull origin main 把最新版本拉下同步
+git pull origin main 把最新版本拉下同步。
 
-cd ..回上頁
+cd ..回上頁。
 
-git status 查看分支現在狀況
+git status 查看分支現在狀況。
 
-git add . 加入
+git add . 加入。
 
-git commit -m "更新內容"
+git commit -m "更新內容"。
 
-git push 推送
+git push 推送。
 
-到github查看是否更新成功
+到github查看是否更新成功。
 
 <!-- PELICAN_END_SUMMARY -->
 
