新增影片重點整理

--- a/markdown/20240322.md
+++ b/markdown/20240322.md
@@ -2,13 +2,29 @@
 Title: W5
 Date: 2024-03-22 16:00
 Category: w5
-Tags: 網誌編寫﹐翻譯作業
+Tags: 網誌編寫﹐自評
 Slug: cd2024-2a-w5
 Author: Probe
 ---
 
 2024 Spring 第五週 網誌
 
-<!-- PELICAN_END_SUMMARY -->
+[字幕影片連結]:https://www.youtube.com/watch?v=xhZdHNDl9Hg
+
+重點整理:組長必須建立一個midag的其中team
+
+利用codespaces來進行同步更新
+
+要啟動codespaces裡要先輸入chmod x+u init_replit把模組安裝
+
+接下來輸入python3 main.py來開啟（類似replit中的Run鍵）
+
+推送的步驟如下
+git add .
+git commit -m "modify site title"
+git push
+完成後回到網頁確認更新完畢
+
+網頁給的cpu為二核 8gb的ram跟32gb的內存
 
 # 內容管理系統
