--- a/markdown/20240412.md
+++ b/markdown/20240412.md
@@ -9,6 +9,10 @@ Author: Probe
 
 2024 Spring 第八週 網誌
 
+<!-- PELICAN_END_SUMMARY -->
+
+# 內容管理系統
+## w8
 今日遇到的較難處理的狀況-提交多數中有一則提交檔案過大，但是已經覆蓋很多次的提交。
 
 詢問老師解釋git只能利用"增加"來提交檔案，所以之前加入過大的檔案儘管刪掉還是存在，只能透過找到那則提交然後單獨刪除才能解決後續的提交。
