更新網誌名稱避免衝突

--- a/markdown/PRB20240412.md
+++ b/markdown/PRB20240412.md
@@ -3,7 +3,7 @@ Title: W8
 Date: 2024-04-12 14:00
 Category: w8
 Tags: 網誌編寫﹐ChatGPT
-Slug: cd2024-2a-w8
+Slug: cd2024-2a-w8-PRB
 Author: Probe
 ---
 
