--- a/markdown/PRB20240426.md
+++ b/markdown/PRB20240426.md
@@ -3,7 +3,7 @@ Title: W10
 Date: 2024-04-26 14:00
 Category: w10
 Tags: 網誌編寫﹐論文摘要
-Slug: cd2024-2a-w10
+Slug: cd2024-2a-w10-PRB
 Author: Probe
 ---
 
