--- a/markdown/PRB20240503.md
+++ b/markdown/PRB20240503.md
@@ -3,7 +3,7 @@ Title: W11
 Date: 2024-05-03 15:00
 Category: w11
 Tags: 網誌編寫﹐課程心得
-Slug: cd2024-2a-w11
+Slug: cd2024-2a-w11-PRB
 Author: Probe
 ---
 
