W13網誌錯誤修正

--- a/markdown/PRB20240517.md
+++ b/markdown/PRB20240517.md
@@ -1,5 +1,5 @@
 ---
-Title: 2024 Spring 課程
+Title: W13
 Date: 2024-05-17 14:30
 Category: w13
 Tags: 網誌編寫﹐NX
@@ -23,3 +23,5 @@ NX繪製零件
 5.軸
 
 轉STL組合後在Inventor進行組裝後，進行CoppeliaSim模擬。
+
+繪製零件之後發放給各組員組裝拍影片。
