發現名稱衝突更改

--- a/markdown/PRB20240419.md
+++ b/markdown/PRB20240419.md
@@ -7,12 +7,12 @@ Slug: cd2024-2a-w9-PRB
 Author: Probe
 ---
 
-2024 Spring 第九週 網誌
+2024 Spring 第九週 期中考週
 
 <!-- PELICAN_END_SUMMARY -->
 
 # 內容管理系統
 ## w9
-期末考週
+期中考週
 
 自評
