新增與老師的問答

--- a/markdown/PRB20240524.md
+++ b/markdown/PRB20240524.md
@@ -7,7 +7,7 @@ Slug: 2024-Spring-w14-PRB
 Author: Probe
 ---
 
-2024 Spring 第十三週 分配工作、零件同整
+2024 Spring 第十四週 分配工作、零件同整
 
 <!-- PELICAN_END_SUMMARY -->
 分配零件給各組員，叮嚀組員要趕上進度。
