新增第十五週網誌(NX與python與參數式的關係)

--- a/markdown/PRB20240531.md
+++ b/markdown/PRB20240531.md
@@ -10,3 +10,7 @@ Author: Probe
 2024 Spring 第十五週 研究期末作業
 
 <!-- PELICAN_END_SUMMARY -->
+
+因上次使用NX內的python record沒有成功，所以先繪製零件，但是目前遇到一個問題，就是畫好的零件已經是一個結果，沒辦法讓程式去了解到繪製過程，沒辦法產生繪製過程的程式碼。
+
+詢問老師過後，得知雖然不能更改，但擁有"參數式"的概念，要的不是結果的零件檔案，而是從中取得參數可以做更改，在不同形狀幾何中，會有固定的變數參數，可以透過這些參數在程式中進行修改，這才是設計中最重要的部分。
