新增零件的python檔

--- a/markdown/PRB20240531.md
+++ b/markdown/PRB20240531.md
@@ -16,3 +16,7 @@ Author: Probe
 詢問老師過後，得知雖然不能更改，但擁有"參數式"的概念，要的不是結果的零件檔案，而是從中取得參數可以做更改，在不同形狀幾何中，會有固定的變數參數，可以透過這些參數在程式中進行修改，這才是設計中最重要的部分。
 
 嘗試開啟球場進行模擬。
+
+此週重新繪製零件並記錄python檔。
+
+檔案如下:[https://drive.google.com/drive/folders/1OiN3QfTITiABzdNes4Dqcw1CNLlJcbt1?usp=drive_link]
