--- a/markdown/PRB20240614.md
+++ b/markdown/PRB20240614.md
@@ -16,7 +16,10 @@ Author: Probe
 
 使用NX繪製零件並建立python檔案，錄影上傳youtube。
 
+youtube連結都在靜態網站。
+
 零件檔案:[https://drive.google.com/drive/folders/1O4HyKlf-hLNW45VXv58zLS72wdOPljq0?usp=sharing]
 
 python檔案:[https://drive.google.com/drive/folders/1tyzc5V65GULadznkhCspiIcfM7aFodyF?usp=sharing]
+
 <!-- PELICAN_END_SUMMARY -->
