新增項目一的影片連結

--- a/markdown/PRB20240524.md
+++ b/markdown/PRB20240524.md
@@ -12,6 +12,6 @@ Author: Probe
 <!-- PELICAN_END_SUMMARY -->
 分配零件給各組員，叮嚀組員要趕上進度。
 
-零件檔案都在雲端硬碟[https://drive.google.com/drive/folders/1BFCF1uZ1_37gER7gu4ghxTeTzkzHRQ0X?usp=drive_link]
+[零件檔案都在雲端硬碟]:https://drive.google.com/drive/folders/1BFCF1uZ1_37gER7gu4ghxTeTzkzHRQ0X?usp=drive_link
 
 零件繪製影片都有用LINE傳給各位，依照各自認領的零件做然後傳至群組。
