--- a/markdown/PRB20240531.md
+++ b/markdown/PRB20240531.md
@@ -19,4 +19,4 @@ Author: Probe
 
 此週重新繪製零件並記錄python檔。
 
-檔案如下:[https://drive.google.com/drive/folders/1OiN3QfTITiABzdNes4Dqcw1CNLlJcbt1?usp=drive_link]
+[檔案如下]:https://drive.google.com/drive/folders/1OiN3QfTITiABzdNes4Dqcw1CNLlJcbt1?usp=drive_link
