--- a/markdown/PRB20240614.md
+++ b/markdown/PRB20240614.md
@@ -7,9 +7,12 @@ Slug: 2024-Spring-w17-PRB
 Author: Probe
 ---
 
-2024 Spring 第十六週 項目作業
+2024 Spring 第十七週 項目作業
+
+<!-- PELICAN_END_SUMMARY -->
 
 繪製足球平台之零件。
+
 1.球本體
 2.球員(小車車)
 3.輪子
@@ -18,8 +21,6 @@ Author: Probe
 
 youtube連結都在靜態網站。
 
-零件檔案:[https://drive.google.com/drive/folders/1O4HyKlf-hLNW45VXv58zLS72wdOPljq0?usp=sharing]
+[零件檔案]:https://drive.google.com/drive/folders/1O4HyKlf-hLNW45VXv58zLS72wdOPljq0?usp=sharing
 
-python檔案:[https://drive.google.com/drive/folders/1tyzc5V65GULadznkhCspiIcfM7aFodyF?usp=sharing]
-
-<!-- PELICAN_END_SUMMARY -->
+[python檔案]:https://drive.google.com/drive/folders/1tyzc5V65GULadznkhCspiIcfM7aFodyF?usp=sharing
